  non-writable directory, e.g. when the output file is `/dev/null`.

* Fixed an issue when printing very large log messages to the debug log.

* Fixed bugs related to support for `-gsplit-dwarf`. Previously ccache could
  produce an incorrect link to the `.dwo` file in the `.o` file.

* Compilations with /dev/null as the input file are now cached.

* ccache now knows how to contruct the object filename if no “-o” option is
  given and the source filename does not include a `.` or ends with a `.`.

* Fixed a temporary file leak when depend mode is enabled and the compiler
  produces standard error output.

* Fixed a bug in the “depend mode” where a manifest hash only could be
  associated with one set of header dependencies.

* Manifest files did not get marked as used on direct cache hits, so the LRU
  cache cleanup would incorrectly remove them eventually. This has now been
  fixed.

* The rewriting of absolute paths into relative paths in the dependency file is
  now enabled in the depend mode as well.

* ccache now ignores unknown keys in configuration files.

* Rearranged command-line options into sections in the help text.

* Documented the previously undocumented `--dump-manifest` and `--hash-file`
  options (only useful for debugging ccache itself).

* Added missing documentation for the command-line option `-k/--get-config`
  added in ccache 3.5.

* Renamed the `--print-config` command to `--show-config`.

* Added a new `--print-stats` command that prints statistics counters in
  machine-parsable (tab-separated) format.


ccache 3.6
----------
Release date: 2019-01-14

Changes
~~~~~~~

- ccache now has an opt-in ``depend mode''. When enabled, ccache never executes
  the preprocessor, which results in much lower cache miss overhead at the
  expense of a lower potential cache hit rate. The depend mode is only possible
  to use when the compiler option `-MD` or `-MMD` is used.

- Added support for GCC's `-ffile-prefix-map` option. The `-fmacro-prefix-map`