@@ -54,7 +54,7 @@ enum stats {
 	STATS_OBSOLETE_MAXFILES = 13,
 	STATS_OBSOLETE_MAXSIZE = 14,
 	STATS_SOURCELANG = 15,
-	STATS_DEVICE = 16,
+	STATS_BADOUTPUTFILE = 16,
 	STATS_NOINPUT = 17,
 	STATS_MULTIPLE = 18,
 	STATS_CONFTEST = 19,
