@@ -125,12 +125,28 @@ base_tests() {
     expect_stat 'compiler produced stdout' 1
 
     # -------------------------------------------------------------------------
-    TEST "Output to a non-regular file"
+    TEST "Output to directory"
 
     mkdir testd
     $CCACHE_COMPILE -o testd -c test1.c >/dev/null 2>&1
     rmdir testd >/dev/null 2>&1
-    expect_stat 'output to a non-regular file' 1
+    expect_stat 'could not write to output file' 1
+
+    # -------------------------------------------------------------------------
+    TEST "Output to file in nonexistent directory"
+
+    mkdir out
+
+    $CCACHE_COMPILE -c test1.c -o out/foo.o
+    expect_stat 'could not write to output file' ""
+    expect_stat 'cache miss' 1
+
+    rm -rf out
+
+    $CCACHE_COMPILE -c test1.c -o out/foo.o 2>/dev/null
+    expect_stat 'could not write to output file' 1
+    expect_stat 'cache miss' 1
+    expect_file_missing out/foo.o
 
     # -------------------------------------------------------------------------
     TEST "No input file"
